fix layout bug

--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -28,6 +28,7 @@
   font-size: 35px;
   color: #52cca3;
   display: flex;
+  padding-bottom: 5px;
 
   div {
     margin-left: 15px;
@@ -55,7 +56,7 @@
     display: flex;
     padding-bottom: 5px;
     color: #52cca3;
-    font-size: 25px;
+    font-size:25px;
     padding-right: 10px;
 
     .localeContent {
