--- a/src/components/services-page/services.module.scss
+++ b/src/components/services-page/services.module.scss
@@ -3,9 +3,7 @@
 .container {
   // height: 2000px;
   padding: 0 1.5rem; //mobile
-  background: rgba(233, 233, 233, 0.555);
   // background: #52cca31f;
-
   padding-top: 2rem;
 
   h2 {
@@ -14,7 +12,6 @@
     color: #FCBD5A;
     
   }
-
 
   // background-image: url("../../assets/services-bg.jpg");
   background-image: url("../../assets/background9.jpg");
@@ -44,7 +41,7 @@
   @media screen and (min-width: 1240px) {
     // font-size: 1.3rem;
     padding: 2rem 4rem;
-    height: 100vh;
+    // height: 100vh;
   }
 
   @media screen and (min-width: 1440px) {
